--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -24,8 +25,9 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
+    "react-native-webview": "^13.7.0",
     "react-navigation": "^5.0.0",
-    "@expo/webpack-config": "^19.0.0"
+    "wavesurfer.js": "^7.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
