--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^15.1.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.7.0",
     "react-navigation": "^5.0.0",
